@@ -1,4 +1,0 @@
-[wrap-git]
-directory = libstephen.git
-url = https://github.com/brenns10/libstephen
-revision = master
